--- a/ignite.temperature/.vscode/launch.json
+++ b/ignite.temperature/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.0/Ignite.Temperature.dll",
+            "preLaunchTask": "daprd-dapr",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Ignite.Temperature.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
