--- a/ignite.temperature/.vscode/tasks.json
+++ b/ignite.temperature/.vscode/tasks.json
@@ -37,6 +37,32 @@
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "daprd-dapr",
+            "command": "daprd",
+            "args": [
+                "-dapr-id",
+                "temp",
+                "-app-port",
+                "5000"
+            ],
+            "isBackground": true,
+            "problemMatcher": {
+                "pattern": [
+                    {
+                        "regexp": ".",
+                        "file": 1,
+                        "location": 2,
+                        "message": 3
+                    }
+                ],
+                "background": {
+                    "beginsPattern": "^.*starting Dapr Runtime.*",
+                    "endsPattern": "^.*waiting on port.*"
+                }
+            },
+            "dependsOn": "build"
         }
     ]
 }
