--- a/ignite.temperature/.vscode/tasks.json
+++ b/ignite.temperature/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/Ignite.Temperature.csproj",
+                "${workspaceFolder}/ignite.temperature.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/Ignite.Temperature.csproj",
+                "${workspaceFolder}/ignite.temperature.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -32,37 +32,23 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/Ignite.Temperature.csproj",
+                "${workspaceFolder}/ignite.temperature.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
         },
         {
-            "label": "daprd-dapr",
-            "command": "daprd",
-            "args": [
-                "-dapr-id",
-                "temp",
-                "-app-port",
-                "5000"
-            ],
-            "isBackground": true,
-            "problemMatcher": {
-                "pattern": [
-                    {
-                        "regexp": ".",
-                        "file": 1,
-                        "location": 2,
-                        "message": 3
-                    }
-                ],
-                "background": {
-                    "beginsPattern": "^.*starting Dapr Runtime.*",
-                    "endsPattern": "^.*waiting on port.*"
-                }
-            },
+            "type": "daprd",
+            "label": "daprd-debug",
+            "appId": "eventconsumer",
+            "appPort": 5000,
             "dependsOn": "build"
+        },
+        {
+            "type": "daprd-down",
+            "label": "daprd-down",
+            "appId": "eventconsumer"
         }
     ]
 }
