--- a/aspnetcore.dapr.secret/.vscode/settings.json
+++ b/aspnetcore.dapr.secret/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "workbench.colorCustomizations": {
         "activityBar.background": "#8a2ca2",
+        "activityBar.activeBackground": "#8a2ca2",
         "activityBar.activeBorder": "#af9530",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
