--- a/aspnetcore.dapr.secret/kubernetes/components/k8s-secret.yaml
+++ b/aspnetcore.dapr.secret/kubernetes/components/k8s-secret.yaml
@@ -5,3 +5,17 @@ metadata:
 type: Opaque
 data:
   redisPasssword: YWRtaW4=
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: dapr-secret-reader
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: secret-reader
+subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: dapr-test
