improved sample with local secret store

--- a/aspnetcore.dapr.secret/.vscode/tasks.json
+++ b/aspnetcore.dapr.secret/.vscode/tasks.json
@@ -37,6 +37,19 @@
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
+        },
+        {
+            "appId": "secrets",
+            "appPort": 5000,
+            "label": "daprd-debug",
+            "type": "daprd",
+            "dependsOn": "build",
+            "componentsPath": "../components"
+        },
+        {
+            "appId": "secrets",
+            "label": "daprd-down",
+            "type": "daprd-down"
         }
     ]
 }
