--- a/aspnetcore.dapr.secret/aspnetcore.dapr.secret.csproj
+++ b/aspnetcore.dapr.secret/aspnetcore.dapr.secret.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapr.AspNetCore" Version="0.9.0-preview01" />
+  </ItemGroup>
+
 </Project>
