--- a/aspnetcore.dapr.secret/kubernetes/components/azure.keyvault.yaml
+++ b/aspnetcore.dapr.secret/kubernetes/components/azure.keyvault.yaml
@@ -1,11 +1,11 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: azurekeyvault
+  name: demosecrets
 spec:
   type: secretstores.azure.keyvault
   metadata:
     - name: vaultName
-      value: <AZURE KEY VAULT NAME>
+      value: dapr-vacd-kv
     - name: spnClientId
-      value: <MANAGED IDENTITY CLIENT ID>
+      value: <Managed Identity Client ID>
