added secret-reader Role and RoleBinding

--- a/aspnetcore.dapr.secret/kubernetes/components/k8s-secret.yaml
+++ b/aspnetcore.dapr.secret/kubernetes/components/k8s-secret.yaml
@@ -8,12 +8,24 @@ data:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: Role
+metadata:
+  name: secret-reader
+  namespace: dapr-test
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
   name: dapr-secret-reader
+  namespace: dapr-test
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: secret-reader
 subjects:
   - kind: ServiceAccount
