--- a/minecraft/deploy/components/state.yaml
+++ b/minecraft/deploy/components/state.yaml
@@ -7,7 +7,7 @@ spec:
   version: v1
   metadata:
     - name: redisHost
-      value: redis-headless.redis.svc.cluster.local:6379
+      value: redis-master.redis.svc.cluster.local:6379
     - name: redisPassword
       secretKeyRef:
         key: redisPass
