fixed setup script and sign function

--- a/minecraft.twins/minecraft.server/minecraft.server.yaml
+++ b/minecraft.twins/minecraft.server/minecraft.server.yaml
@@ -4,6 +4,19 @@ data:
     #!/bin/sh
 
     # https://github.com/ediloren/ScriptCraft
+    wget -O- https://github.com/ediloren/ScriptCraft/raw/development/target/scriptcraft.jar > /data/plugins/scriptcraft.jar
+
+    wget -O- https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-21.2.0/graalvm-ce-java16-linux-amd64-21.2.0.tar.gz > /graalvm/graalvm.tar.gz
+
+    tar -xzf /graalvm/graalvm.tar.gz -C /graalvm
+
+    rm /graalvm/graalvm.tar.gz
+
+    wget -O- https://github.com/Tiiffi/mcrcon/releases/download/v0.7.1/mcrcon-0.7.1-linux-x86-64.tar.gz > /mcrcon/mcrcon.tar.gz
+
+    tar -xzf /mcrcon/mcrcon.tar.gz -C /mcrcon
+
+    rm /mcrcon/mcrcon.tar.gz
      
   ops-fix.sh: |-
     #!/bin/sh
@@ -124,9 +137,8 @@ data:
   netcoreconf.js: |-
     var utils = require('utils'),
     signs = require('signs'),
-    http = require('http'),
-    jsResponse;
-
+    http = require('http')
+    
     exports.time_sign = function( player ) {
         var cartel = box(blocks.sign_post);
         var cordx = cartel.x;
@@ -139,8 +151,7 @@ data:
         }
         function task(i) {
             setTimeout(function() {
-                http.request('http://localhost:3500/v1.0/invoke/dapr-sensors-average/method/average/1',function(responseCode, responseBody){ jsResponse = JSON.stringify( responseBody ); });
-                setsigntext(cordx, cordy, cordz, jsResponse.temperature);
+                http.request('http://localhost:3500/v1.0/invoke/dapr-sensors-average/method/average/1',function(responseCode, responseBody){ setsigntext(cordx, cordy, cordz, JSON.parse( responseBody ).temperature); });
             }, 2000 * i);
         }
     };
