--- a/minecraft/minecraftbot/k8s/java-server.yaml
+++ b/minecraft/minecraftbot/k8s/java-server.yaml
@@ -30,6 +30,8 @@ spec:
               value: "vicky"
             - name: "SPAWN_MONSTERS"
               value: "FALSE"
+            - name: VERSION
+              value: "1.16.1"
 ---
 apiVersion: v1
 kind: Service
