--- a/minecraft/deploy/components/twitter.yaml
+++ b/minecraft/deploy/components/twitter.yaml
@@ -23,6 +23,6 @@ spec:
         key: accessSecret
         name: accessSecret
     - name: query
-      value: "roblox" # your search query, required
+      value: "LaPalma" # your search query, required
 auth:
   secretStore: secrets
